Refactor platformio.ini to generalize environment
Removed specific environment settings and library dependencies.

--- a/EmbeddedSystem/platformio.ini
+++ b/EmbeddedSystem/platformio.ini
@@ -1,19 +1,19 @@
 ; PlatformIO Configuration for Smart Home ESP32
 ; Firebase Realtime Database Streaming
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
+[env:]
+platform =
+board = 
+framework = 
 monitor_speed = 115200
 upload_speed = 921600
 
 lib_deps =
-    mobizt/FirebaseClient@^2.2.7
-    mobizt/FirebaseJson@^3.0.10
+    mobizt/
+    mobizt/
 
 build_flags =
     -DBOARD_HAS_PSRAM=0
 
 monitor_filters = 
-    esp32_exception_decoder
+
